# helloworld

./: .float2binar.cpp.swp  a.out  data.csv  float2binar.cpp  hello_world.cpp  infinite_cycle.cpp  int_to_binar.cpp  integral.cpp  mantissa_overflow.cpp  plot_script.plt  visual.py
1lab/: 1.csv  1log.csv  contest.cpp  functions.cpp  functions.h  graph.py  main_body.cpp  results.csv  sortings.cpp  startercode_time.cpp
3d_project/: CMakeLists.txt
3d_project/src/: main.cpp
3lab/: subvector.cpp
ant/: data_01.txt  data_01_hook.txt  data_02.txt  data_02_hook.txt  data_03.txt  data_03_hook.txt  data_11.txt  data_11_hook.txt  data_12.txt  data_12_hook.txt  data_13.txt  data_13_hook.txt  graph.py
ant3/: Albedo_otchet.odt  code.py
